--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   provider: ^6.0.5
   easy_localization: ^3.0.2
   pinput: ^2.2.31
+  flutter_native_contact_picker: ^0.0.4
+  dio: ^5.2.1+1
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
