--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,9 @@ dependencies:
   pinput: ^2.2.31
   flutter_native_contact_picker: ^0.0.4
   dio: ^5.2.1+1
-  telegram_bot_api: ^0.0.3
-  telegram_client: ^0.4.28
+  http: ^1.1.0
+  country_picker: ^2.0.20
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
