--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   easy_localization: ^3.0.2
-  pinput: ^2.2.31
   dio: ^5.2.1+1
   http: ^1.1.0
   intl_phone_field: ^3.2.0
   fluttertoast: ^8.2.2
+  image_picker: ^1.0.0
+  smart_auth: ^1.0.8
+  universal_platform: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
