--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.0.0
   smart_auth: ^1.0.8
   universal_platform: ^1.0.0+1
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
